<resources>
    <string name="app_name">SuperCaly</string>
    <string name="google_maps_key">AIzaSyC7w48Efb57G0XNMCndsPhaOSoYUhR4xTU</string>
    <string name="facebook_app_id">Feb2016</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="social">Social</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="event_details">Event Details</string>
    <string name="contacts">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="action_today">Today</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_login">Sign In</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_sync">Sync</string>
    <string name="action_done">Done</string>
    <string name="action_filter">Filter</string>
    <string name="fragment_main">MainFragment</string>
    <string name="fragment_login">LoginFragment</string>
    <string name="fragment_forgotpassword">ForgotPasswordFragment</string>
    <string name="fragment_register">RegisterFragment</string>
    <string name="fragment_calendar">CalendarFragment</string>
    <string name="fragment_calendar_events">CalendarEventsFragment</string>
    <string name="fragment_events">EventsFragment</string>
    <string name="fragment_list">ListFragment</string>
    <string name="fragment_chats">ChatsFragment</string>
    <string name="fragment_chats_list">ChatsListFragment</string>
    <string name="fragment_friends_list">FriendsListFragment</string>
    <string name="fragment_map">MapFragment</string>
    <string name="fragment_dummy">DummyFragment</string>
    <string name="fragment_settings">SettingsFragment</string>
    <string name="fragment_location_setting">LocationSettingFragment</string>
    <string name="fragment_contacts">ContactsFragment</string>
    <string name="settings_cat_general_key">category_general</string>
    <string name="settings_cat_general_title">General</string>
    <string name="settings_cat_location_key">category_location</string>
    <string name="settings_cat_location_title">Location</string>
    <string name="settings_cat_calendars_key">category_calendar</string>
    <string name="settings_cat_calendars_title">Calendars</string>
    <string name="settings_cat_notifications_key">category_notifications</string>
    <string name="settings_cat_notifications_title">Notifications</string>
    <string name="settings_cat_other_key">category_other</string>
    <string name="settings_cat_other_title">Other</string>
    <string name="pref_week_start_key">pref_calendar_week_start</string>
    <string name="pref_week_start_title">Week Starts On</string>
    <string name="pref_week_start_summary">Default</string>
    <string-array name="pref_week_start_entries">
        <item>Default</item>
        <item>Sunday (US)</item>
        <item>Monday (Europe)</item>
    </string-array>
    <string-array name="pref_week_start_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_week_start_default">0</string>
    <string name="pref_week_num_key">pref_calendar_week_number</string>
    <string name="pref_week_num_title">Show Week Numbers</string>
    <string name="pref_week_num_default">false</string>
    <string name="pref_calendar_default_key">pref_calendar_default</string>
    <string name="pref_calendar_default_title">Default Calendar</string>
    <string name="pref_location_service_key">pref_location_service</string>
    <string name="pref_location_service_title">Enable Location Service</string>
    <string name="pref_location_service_default">true</string>
    <string name="pref_crash_report_key">pref_crash_report</string>
    <string name="pref_crash_report_title">Enable Crash Reporting</string>
    <string name="pref_crash_report_default">true</string>
    <string name="pref_notification_key">pref_notification</string>
    <string name="pref_notification_title">Enable Notifications</string>
    <string name="pref_notification_default">true</string>
    <string name="pref_notification_vibrate_key">pref_notification_vibrate</string>
    <string name="pref_notification_vibrate_title">Vibration</string>
    <string name="pref_notification_vibrate_default">false</string>
    <string name="pref_version_key">pref_version</string>
    <string name="pref_version_title">Version</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="events">Events</string>
    <string name="favorite">Favorite</string>
    <string name="upcoming">Upcoming</string>
    <string name="empty">Empty</string>
    <string name="calendar">Calendar</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="options">Options</string>
    <string name="all_day">All Day</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="guests">Guests</string>
    <string name="photos">Photos</string>
    <string name="reminders">Reminders</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_phone">Email or Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google_log_in">Sign in with Google</string>
    <string name="create_account">Create SuperCaly Account</string>
    <string name="enter_password">Enter SuperCaly Password</string>
    <string name="sign_up">Sign Up?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="next">Continue</string>
    <string name="start">Start</string>
    <string name="or">Or</string>
    <string name="location_setting">Location Setting</string>
    <string name="untitled">Untitled</string>
    <string name="favorites">Favorites</string>
    <string name="suggestions">Suggestions</string>
    <string name="users">Users</string>
    <string name="local_calendar">Local Calendar</string>
    <string name="local_contacts">Local Contacts</string>
    <string name="other_contacts">Other Contacts</string>
    <string name="no_results">No Search Results</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="hello">Hello</string>
    <string name="remember_me">Remember Me</string>
    <string name="reminder_add">Add Reminder</string>
    <string name="no_subject">No Subject</string>
    <string name="submit">Submit</string>
    <string name="select_items">Select Items</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="value_selected">%d Selected</string>
    <string name="today">Today</string>
    <string name="event_filters_title">Event Title Filters</string>
    <string name="close">Close</string>
    <string name="add_filter">Add Filter</string>
    <string name="contacts_search">Enter Name or Email</string>
    <string name="favorites_add">Add to Favorites</string>
    <string name="favorites_added">Added to Favorites</string>
    <string name="favorites_remove">Remove from Favorites</string>
    <string name="favorites_removed">Removed from Favorites</string>
    <string name="friends_add">Add to Friends</string>
    <string name="friends_remove">Remove from Friends</string>
    <string name="skip">Skip</string>
    <string name="invite">Invite</string>
    <string name="invite_to">Invite to %s</string>
    <string name="remove">Remove</string>
    <string name="me">Me</string>
    <string name="chat_input_hint">Your Message Here</string>
    <string name="send">Send</string>
    <string name="chat_menu_add_friend">Invite...</string>
    <string name="confirm_event_save">Do you want to save your changes?</string>
    <string name="confirm_event_delete">Are you sure you want to delete this event?</string>
    <string name="confirm_event_delete_multiple">Are you sure you want to delete these events?</string>
    <string name="confirm_event_sync_multiple">Are you sure you want to sync these events to [%s]?</string>
    <string name="confirm_logout">Are you sure you want to sign out?</string>
    <string name="confirm_chat_delete">Are you sure you want to delete this chat?</string>
    <string name="confirm_friend_delete">Are you sure you want to remove this friend?</string>
    <string name="verify_location_change_forAll">Do you want to remember this location for all future/past events?</string>
    <string name="confirm_discard_change">Discard the changes?</string>
    <string name="pending_server_response">Waiting for response from server. Please check back in a few seconds…</string>
    <string name="event_action_move">Moved Event</string>
    <string name="event_action_copy">Copied Event</string>
    <string name="event_action_delete">Deleted Event</string>
    <string name="undo">UNDO</string>
    <string name="start_time_format">Start Time: %s</string>
    <string name="end_time_format">End Time: %s</string>
    <string name="media_size_limit">File exceeds size limit of %s</string>
    <string name="attachment_error">[Download Failed]</string>
    <string name="crash_report_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us a crash report.</string>
    <string name="crash_report_comment">Comments (Optional):</string>
    <string name="crash_report_sent">Thank you for your feedback!</string>
    <string name="send_report">Send Report</string>
    <string name="create_chat_title">Create New Chat</string>
    <string name="error_chat_participant">Chat must have at least two participants</string>
    <string name="network_error_sync_text">Network error. The chat has been saved on your device and will be sent later</string>
    <string name="error_chat_title">Chat title cannot be empty</string>
    <string name="error_saving_chat">Error saving chat to your device. Please try again</string>
    <string name="error_no_email">Chat attendee must have a valid email address</string>
    <string name="error_create_attendee">Error creating attendee in database</string>
    <string name="error_update_attendee">Error updating attendee in database</string>
    <string name="title_activity_create_chat">CreateChatActivity</string>
    <string name="error_create_chat">Error creating chat. Please try later</string>
    <string name="dropped_from_chat">You have been dropped from this chat. You cannot send or receive any messages here</string>
    <string name="dropped_from_chat_title">You have been dropped from chat: </string>
    <string name="add_chat_attendee">New chat attendees added: </string>
    <string name="chat_title">Chat title: </string>
    <string name="drop_chat_attendee">Dropped chat attendees: </string>
    <string name="only_creator_change_attendee">Only chat creator can make changes to attendees</string>
</resources>