<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/solid_translucent_all"
            android:fontFamily="sans-serif"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:padding="6dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/translucent_50"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/solid_translucent_all"
            android:fontFamily="sans-serif"
            android:hint="@string/last_name"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:padding="6dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/translucent_50"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/solid_translucent_all"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/translucent_50"
        android:textCursorDrawable="@null"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/solid_translucent_all"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/translucent_50"
        android:textCursorDrawable="@null"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/solid_none_all"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/solid_none_all"
            android:layout_weight="0.5"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>
