<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/google"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_none_all"
                    android:text="@string/google_log_in"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="16dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/translucent_50"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/or"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/translucent_50"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_translucent_all"
                    android:fontFamily="sans-serif"
                    android:hint="@string/email_phone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/translucent_50"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_translucent_all"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/translucent_50"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/translucent_50"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_none_all"
                    android:layout_marginTop="10dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/solid_translucent_top"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>
</LinearLayout>
