<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:background="@drawable/solid_translucent_all"
                        android:fontFamily="sans-serif"
                        android:hint="@string/first_name"
                        android:layout_weight="0.5"
                        android:padding="6dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/translucent_50"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:background="@drawable/solid_translucent_all"
                        android:fontFamily="sans-serif"
                        android:hint="@string/last_name"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.5"
                        android:padding="6dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/translucent_50"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_translucent_all"
                    android:fontFamily="sans-serif"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="10dp"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/translucent_50"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_translucent_all"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/translucent_50"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_translucent_all"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/translucent_50"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/solid_none_all"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/solid_translucent_top"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>
</LinearLayout>
